// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose Your Bathroom page Component should render ChooseBathroomPageCCUI 1`] = `
<div>
  <div
    data-testid="ChooseBathroomPage"
  />
</div>
`;

exports[`Choose Your Bathroom page getLayout should wrap page with SecondaryHDPLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-testid="SecondaryHDPLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="ChooseBathroomPage"
      />
    </div>
  </div>
</div>
`;
